[package]
name = "windows-touch-simulator"
version = "0.1.0"
edition = "2021"

[dependencies]
windows = { version = "0.57.0", features = [
    "Win32_System_Threading",
    "Win32_System_LibraryLoader",
    "Win32_Security",
    "Win32_UI_WindowsAndMessaging",
    "Win32_UI_Input_Pointer",
    "Win32_UI_Input_KeyboardAndMouse",
    "Win32_UI_HiDpi",
    "Win32_Graphics_Gdi",
] }

[profile.release]
panic = "abort"
lto = true
