[package]
name = "windows-touch-simulator"
version = "0.0.4"
edition = "2021"

[features]
system-tray = ["tray-icon", "tauri-winres"]

[dependencies]
windows = { version = "0.60", features = [
    "Win32_System_Threading",
    "Win32_System_LibraryLoader",
    "Win32_Security",
    "Win32_UI_WindowsAndMessaging",
    "Win32_UI_Input_Pointer",
    "Win32_UI_Input_KeyboardAndMouse",
    "Win32_UI_HiDpi",
    "Win32_Graphics_Gdi",
] }
tray-icon = { version = "0.20", optional = true }

[build-dependencies]
tauri-winres = { version = "0.3", optional = true }

[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"
lto = true
